se_hizo_la_visualizacion_por_medio_de_los_roles_de_usuarios_falta_jefe_de_grupo

--- a/Appcoordinador/templates/base_coordinador.html
+++ b/Appcoordinador/templates/base_coordinador.html
@@ -38,13 +38,13 @@
                                 <a href="{% url 'agregar_instructor' %}" style="color: white;">Agregar Instructor</a>
                             </button>
                             <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
-                                <a href="{% url 'asignacion_instructores' %}" style="color: white;">Asignacion de Instructores</a>
+                                <a href="{% url 'asignacion_horario_instructor' %}" style="color: white;">Asignacion de Instructores</a>
                             </button>           
                             <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
-                                <a href="{% url 'visualizar_instructores' %}" style="color: white;">Visualizar Horario de Instructores</a>
+                                <a href="{% url 'visualizar_horarios_instructores' %}" style="color: white;">Visualizar Horario de Instructores</a>
                             </button>
                             <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
-                                <a href="#" style="color: white;">Visualizar Horarios de Fichas</a>
+                                <a href="{% url 'visualizar_horarios_fichas' %}" style="color: white;">Visualizar Horarios de Fichas</a>
                             </button>
                             <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
                                 <a href="{% url 'deshabilitar_ficha' %}" style="color: white;">Deshabilitar Ficha</a>
