se_hizo_el_logout_de_los_roles

--- a/Appinstructor/templates/visualizar_horarios.html
+++ b/Appinstructor/templates/visualizar_horarios.html
@@ -24,10 +24,8 @@
                                 User
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Administrador</a></li>
-                                <li><a class="dropdown-item" href="#">Coordinador</a></li>
-                                <li><a class="dropdown-item" href="#">Jefe de grupo</a></li>
-                                <li><a class="dropdown-item" href="#">Instructor</a></li>
+                                <li><a class="dropdown-item" href="#">Actualizar informacion</a></li>
+                                <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesion</a></li>
                             </ul>
                         </div>
                     </div>
