--- a/Appcoordinador/templates/base_coordinador.html
+++ b/Appcoordinador/templates/base_coordinador.html
@@ -61,7 +61,7 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="#">Actualizar Informacion</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesion</a></li>
                     </ul>
                 </div>
                 
