se_actualizo_plantillas_modificadas

--- a/Appcoordinador/templates/visualizar_horarios_fichas.html
+++ b/Appcoordinador/templates/visualizar_horarios_fichas.html
@@ -110,8 +110,15 @@
                             </tr>
                             </tbody>
                     </table>
+                    <div class="row">
+                        <div class="col-10"></div>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-outline-dark">Descargar PDF</button>
+                        </div>                
+                    </div>    
                 </div>
-            </div>      
+            </div> 
+             
         </div>
     </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
