--- a/Appcoordinador/templates/base_coordinador.html
+++ b/Appcoordinador/templates/base_coordinador.html
@@ -57,17 +57,15 @@
                 </div>
                 <div class="col-3 mt-4 dropdown text-center">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        User
+                        Coordinador
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">Actualizar Informacion</a></li>
+                        <li><a class="dropdown-item" href="{% url 'actualizar' %}">Actualizar Informacion</a></li>
                         <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesion</a></li>
                     </ul>
                 </div>
-                
             </div>
         </div> 
-
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
