--- a/Appjefedegrupo/templates/visualizar_horarios_trimestres.html
+++ b/Appjefedegrupo/templates/visualizar_horarios_trimestres.html
@@ -7,51 +7,64 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>P. Instructor</title>
+    <title>Visualizar instructores</title>
 </head>
 <body>
+
     <div class="bg-light">
         <div class="container p-3">
-            <nav class="navbar navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="{% url 'base_coordinador' %}">
-                        <i class="fal fa-home" style="font-size: 45px;" ></i>                        
-                    </a>
+            <div class="row mb-5">
+                <nav class="navbar navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="{% url 'base_coordinador' %}">
+                            <i class="fal fa-home" style="font-size: 45px;"></i>
+                        </a>
                 
-                    <div>
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                Instructor
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Actualizar Información</a></li>
-                                <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesión</a></li>
-                            
-                            </ul>
+                        <div>
+                                
+                            <div class="dropdown " >
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Jefe de grupo
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li><a class="dropdown-item" href="#">Actualizar Información<noscript></noscript></a></li>
+                                    <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesión</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </nav>
-            <div class="row">
-                <div class="dropdown mt-4">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        Ver mis Horarios
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">Trimestre 1</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 2</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 3</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 4</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 5</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 6</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 7</a></li>
-                        <li><a class="dropdown-item" href="#">Trimestre 8</a></li>
-                    </ul>
-                </div>
+                </nav>
             </div>  
+            <div class="row mb-2 " style="justify-content: center;">
+                <div class="col-md-3"></div>
+                        <div class="col-2 mb-5">
+                            <button type="button" class="btn btn-outline-dark">Trimestre 1</button>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-outline-dark">Trimestre 2</button>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-outline-dark">Trimestre 3</button>
+                        </div>
+                        <div class="col-md-3"></div>
+                        
+            
+                        <div class="col-md-3"></div>
+                        <div class="col-2 mb-2">
+                            <button type="button" class="btn btn-outline-dark ">Trimestre 4</button>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-outline-dark">Trimestre 5</button>
+                        </div>
+                        <div class="col-2">
+                            <button type="button" class="btn btn-outline-dark">Trimestre 6</button>
+                        </div>
+                        <div class="col-md-3"></div>
+                
+            </div>
             
 
-            <div class="card shadow-lg p-3 mb-5 bg-white mt-5">
+            <div class="card shadow-lg p-3 mb-5 bg-white">
                 <div class="card-body">
                     <table class="table table-bordered border border-dark">
                         <thead>
@@ -115,13 +128,16 @@
                             </tr>
                             </tbody>
                     </table>
-                    <div class="row">
-                        <div class="col-10"></div>
-                        <div class="col-2">
-                            <button type="button" class="btn btn-outline-dark">Descargar PDF</button>
-                        </div>                
-                    </div>    
                 </div>
+                <div class="row">
+                    <div class="col-10"></div>
+                    <div class="col-2">
+                        <button type="button" class="btn btn-outline-dark">Descargar PDF</button>
+                    </div>
+                    
+                </div>
+               
+            
             </div>      
         </div>
     </div>
