--- a/Appinstructor/templates/visualizar_horarios.html
+++ b/Appinstructor/templates/visualizar_horarios.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>Visualizar instructores</title>
+    <title>P. Instructor</title>
 </head>
 <body>
     <div class="bg-light">
@@ -15,42 +15,43 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="{% url 'base_coordinador' %}">
-                        <i class="fal fa-home" style="font-size: 45px;"></i>
+                        <i class="fal fa-home" style="font-size: 45px;" ></i>                        
                     </a>
+                
                     <div>
-                        
-                        </svg>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                User
+                                Instructor
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Actualizar Informacion</a></li>
-                                <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                                <li><a class="dropdown-item" href="#">Actualizar Información</a></li>
+                                <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesión</a></li>
+                            
                             </ul>
                         </div>
                     </div>
                 </div>
             </nav>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center mt-5">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">Jorge Luis Raigosa Barahona</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Yuly Paulin Saenz Agudelo</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Yuely Adriana Arce Arias</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="row">
+                <div class="dropdown mt-4">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        Ver mis Horarios
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">Trimestre 1</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 2</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 3</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 4</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 5</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 6</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 7</a></li>
+                        <li><a class="dropdown-item" href="#">Trimestre 8</a></li>
+                    </ul>
+                </div>
+            </div>  
+            
 
-            <div class="card shadow-lg p-3 mb-5 bg-white">
+            <div class="card shadow-lg p-3 mb-5 bg-white mt-5">
                 <div class="card-body">
                     <table class="table table-bordered border border-dark">
                         <thead>
