--- a/Appinstructor/templates/visualizar_horarios.html
+++ b/Appinstructor/templates/visualizar_horarios.html
@@ -24,7 +24,7 @@
                                 Instructor
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Actualizar Información</a></li>
+                                <li><a class="dropdown-item" href="{% url 'visualizar_horarios' %}">Actualizar Información</a></li>
                                 <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesión</a></li>
                             
                             </ul>
