--- a/Appjefedegrupo/templates/visualizar_horarios_trimestres.html
+++ b/Appjefedegrupo/templates/visualizar_horarios_trimestres.html
@@ -27,7 +27,7 @@
                                     Jefe de grupo
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="#">Actualizar Información<noscript></noscript></a></li>
+                                    <li><a class="dropdown-item" href="{% url 'visualizar_horarios_trimestres' %}">Actualizar Información<noscript></noscript></a></li>
                                     <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesión</a></li>
                                 </ul>
                             </div>
