--- a/Appcoordinador/templates/base_coordinador.html
+++ b/Appcoordinador/templates/base_coordinador.html
@@ -60,7 +60,7 @@
                         Coordinador
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="{% url 'actualizar' %}">Actualizar Informacion</a></li>
+                        <li><a class="dropdown-item" href="{% url 'base_coordinador' %}">Actualizar Informacion</a></li>
                         <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesion</a></li>
                     </ul>
                 </div>
