--- a/Appcoordinador/templates/visualizar_horarios_instructores.html
+++ b/Appcoordinador/templates/visualizar_horarios_instructores.html
@@ -25,30 +25,74 @@
                                 Coordinador
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="{% url 'visualizar_horarios_instructores' %}">Actualizar Informacion</a></li>
-                                <li><a class="dropdown-item" href="{% url 'salir' %}">Cerrar sesion</a></li>
+                                <li><a class="dropdown-item" href="#">Actualizar Informacion</a></li>
+                                <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </nav>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center mt-5">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">Jorge Luis Raigosa Barahona</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Yuly Paulin Saenz Agudelo</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Yuely Adriana Arce Arias</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+
+            <div class="row">
+
+                <div class="col-2">
+
+                
+                    <div class="dropdown mt-5">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Trimestre
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Trimestre 1</a></li>
+                            <li><a class="dropdown-item" href="#">Trimestre 2</a></li>
+                            <li><a class="dropdown-item" href="#">Trimestre 3</a></li>
+                            <li><a class="dropdown-item" href="#">Trimestre 4</a></li>
+                            <li><a class="dropdown-item" href="#">Trimestre 5</a></li>
+                            <li><a class="dropdown-item" href="#">Trimestre 6</a></li>
+                            
+                        </ul>
+                    </div>
+                    
+                </div>
+                <div class="col-2">
+
+                
+                    <div class="dropdown mt-5">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Fichas 
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">2068106</a></li>
+                            
+                            
+                        </ul>
+                    </div>
+                    
+                </div>
+        
+                
+    
+                <div class="col-8">
+
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center mt-5">
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">Jorge Luis Raigosa Barahona</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Yuly Paulin Saenz Agudelo</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Yuely Adriana Arce Arias</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
 
             <div class="card shadow-lg p-3 mb-5 bg-white">
                 <div class="card-body">
