--- a/Appcoordinador/templates/asignar_horario_instructor.html
+++ b/Appcoordinador/templates/asignar_horario_instructor.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>C/Asignar Horario</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="bg-light">
         <div class="container p-3">
             <nav class="navbar navbar-light">
@@ -20,6 +20,7 @@
                         </a>
                     </nav>
             </nav>
+            
             <div class="row">
                 <div class="col">
                     {% load static %}
@@ -107,6 +108,7 @@
                             
                         </div>
                         
+                    
                         <div class="row" style="justify-content: left; align-items: center;">
                             <div class="col-7 mb-3">
                                 <label for="InputFicha" class="form-label">Ficha</label>
@@ -121,19 +123,33 @@
                                     <option selected>Seleccionar</option>
                                     <option value="1">Analisis y desarrollo de sistemas de informacion (ADSI)</option>
                                 </select>
-                            </div>                    
+                            </div>
+                            
                             <div class="col-7 mb-3">
                                 <label for="competencia" class="form-label">Competencia</label>
-                                <input type="text" class="form-control" id="competencia">
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Seleccionar</option>
+                                    <option value="1">...</option>
+                                </select>
+                            </div>
+                            <div class="col-7 mb-3">
+                                <label for="resultado" class="form-label">Resultado de Aprendizaje</label>
+                                <input type="text" class="form-control" id="resultado">
+                            </div>
+                            <div class="col-7 mb-3">
+                                <label for="actividad" class="form-label">Actividad</label>
+                                <input type="text" class="form-control" id="actividad">
                             </div>
                             <div class="col-7 mb-3">
                                 <label for="trimestre" class="form-label">Trimestre</label>
                                 <input type="text" class="form-control" id="competencia">
                             </div>
+                            
                             <div class="col-7 mb-3">
                                 <label for="InputInsComp" class="form-label">Instructor a cargo de la competencia</label>
                                 <input type="text" class="form-control" id="insComp">
                             </div>
+                            
                             <div class="col-7 mb-3 mt-3">
                                 <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
                                     <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
@@ -144,13 +160,13 @@
                                 
                                     <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
                                     <label class="btn btn-outline-primary" for="btncheck3">Miercoles</label>
-                                    
+        
                                     <input type="checkbox" class="btn-check" id="btncheck4" autocomplete="off">
                                     <label class="btn btn-outline-primary" for="btncheck4">Jueves</label>
-
+        
                                     <input type="checkbox" class="btn-check" id="btncheck5" autocomplete="off">
                                     <label class="btn btn-outline-primary" for="btncheck5">Viernes</label>
-
+        
                                     <input type="checkbox" class="btn-check" id="btncheck6" autocomplete="off">
                                     <label class="btn btn-outline-primary" for="btncheck6">Sabado</label>
                                 </div>
