--- a/Apphorarios/templates/registro_usuarios.html
+++ b/Apphorarios/templates/registro_usuarios.html
@@ -1,5 +1,47 @@
-<form action="" method="post">
-    {% csrf_token %}
-    {{forms.as_p}}
-    <button type="submit">Enviar</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Registro_usuarios</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="bg-light">
+            <div class="container p-3">
+                <nav class="navbar navbar-light">
+                    <nav class="navbar navbar-light ">
+                        <a class="navbar-brand" href="{% url 'base_coordinador' %}">
+                            <i class="fal fa-home" style="font-size: 45px;"></i>
+                        </a>
+                    </nav>
+                </nav>
+                <div class="row">
+                    <div class="col">
+                        {% load static %}
+                        <img src= "{% static "img/logosena.png" %}" class="img-fluid mx-auto d-block mt-4" width="150px" alt="..."><br>
+                    </div>
+                </div><br>
+                <div class="card shadow-lg p-3 mb-5 bg-white">
+                    <div class="card-header bg-white">
+                        <dt class="text-center display-6 mb-3">Registro Usuarios</dt>
+                    </div>
+                    <div class="card-body">
+                        <form method="post">
+                            {% csrf_token %}
+                            {{forms.as_p}}
+                            <br>
+                            <div class="col-auto mb-2">
+                                <button type="submit" class="btn btn-success">Agregar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>    
+            </div>
+        </div>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
+</html>
