--- a/Appcoordinador/templates/base_coordinador.html
+++ b/Appcoordinador/templates/base_coordinador.html
@@ -38,6 +38,9 @@
                                 <a href="{% url 'agregar_instructor' %}" style="color: white;">Agregar Instructor</a>
                             </button>
                             <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
+                                <a href="{% url 'deshabilitar_instructor' %}" style="color: white;">Agregar Usuario</a>
+                            </button>
+                            <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
                                 <a href="{% url 'asignacion_horario_instructor' %}" style="color: white;">Asignacion de Instructores</a>
                             </button>           
                             <button type="button" class="btn btn-secondary btn-lg p-2 mb-3" style="border-color: black;">
